@@ -19,4 +19,10 @@ public class WindowEventListener implements WindowEventListenerInterface {
 	/* The method called when the window changes size */
 	public void onWindowResized(WindowSizeEvent e) {}
 	
+	/* The method called when the cursor enters the window */
+	public void onCursorEnter() {}
+	
+	/* The method called when the cursor leaves the window */
+	public void onCursorExit() {}
+	
 }
