@@ -1,4 +1,11 @@
 -------------------------------------------------------------
+Release 1 | Beta 0 | Development 6 | Experimental 3
+
+* Added cursor entered/exited events to the window
+
+* Moved ParserUtils to org.andor.utils
+
+-------------------------------------------------------------
 Release 1 | Beta 0 | Development 6 | Experimental 2
 
 * Added AABB3D
